# owsd

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
cmake/modules/: CodeCoverage.cmake  FindCMocka.cmake  FindLIBUBUS.cmake
docs/: docs.md  functionspec.md  testspec.md  ubus.splash.md
docs/api/: owsd.md  uci.owsd.md
gitlab-ci/: functional-api-test.sh  functional-test.sh  iopsys-supervisord.conf  setup.sh  unit-test.sh
res/: clientsh  router.network
schemas/ubus/: owsd.json
schemas/uci/: owsd.json
src/: access_check.c  access_check.h  common.h  config.c  config.h  dbus-io.c  dbus-io.h  dubus_conversions.h  dubus_conversions_names.c  dubus_conversions_types.c  local_stub.c  local_stub.h  main.c  owsd-config.in.h  rpc.c  rpc.h  rpc_call.c  rpc_call.h  rpc_call_dbus.h  rpc_call_ubus.h  rpc_list.c  rpc_list.h  rpc_list_dbus.c  rpc_list_dbus.h  rpc_list_ubus.h  rpc_sub.c  rpc_sub.h  schema.c  schema.h  ubusx_acl.c  ubusx_acl.h  uproxyd.c  util_dbus.c  util_dbus.h  util_json_validation.c  util_json_validation.h  util_jsonrpc.c  util_jsonrpc.h  util_ubus_blob.h  ws_http.c  (+9 more)
test/api/json/: owsd.validation.json
test/cmocka/: CMakeLists.txt  entrypoint.sh  http_test.c  owsd_test.c  rpc_test.c  supervisord.conf  ubus_test.c  ubusx_test.c
test/cmocka/files/etc/config/: rpcd
test/cmocka/files/etc/ubusx/: ubusxDemoCA.crt  ubusxDemoCA.key  ubusxDemoCA.srl  ubusx_demo_only.crt  ubusx_demo_only.csr  ubusx_demo_only.key
test/cmocka/files/tmp/owsd/: cfg.json  rpt_cfg.json
test/cmocka/files/usr/share/rpcd/acl.d/: user.json
test/cmocka/files/usr/share/rpcd/schemas/: invalid_template.json  restricted_template.json
test/cmocka/files/www/: index.html
test/cmocka/template_obj/: CMakeLists.txt  template.c
test/js/: client.js  client_interactive.js  package.json
